fix: list and tree overflow issues

--- a/src/components/file-browser-container/file-browser-container-core.scss
+++ b/src/components/file-browser-container/file-browser-container-core.scss
@@ -16,8 +16,10 @@
 }
 
 .main {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
 	border-left: 1px solid #f2f2f2;
-	overflow: hidden;
 }
 
 .sidebar {
@@ -28,4 +30,10 @@
 file-browser-tree {
 	padding: 5px;
 	overflow: auto;
+}
+
+file-browser-list {
+	display: flex;
+	flex-direction: column;
+	flex: 1 1 0%;
 }
